hands-on/Terraform/terraform-04_Modules_Import/class/learn-terraform-import/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "4.9.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "tf-instances" {
  ami = element(var.tf-ami, count.index)
  instance_type = "t2.micro"
  count = 3
  key_name = "FirstKey"
  security_groups = ["tf-import-sg"]
  tags = {
    Name = element(var.tf-tags, count.index)
  }
  
}

variable "tf-ami" {
  type = list(string)
  default = ["ami-0c02fb55956c7d316", "ami-04505e74c0741db8d", "ami-0b0af3577fe5e3532"]
}

variable "tf-tags" {
  type = list(string)
  default = ["aws-linux-2", "ubuntu-20.04", "red-hat-linux-8"]
}

resource "aws_security_group" "tf-sg" {
  name = "tf-import-sg"
  description = "terraform import-sg"
  tags = {
    Name = "tf-import-sg"
  }

  ingress {
    from_port   = 80
    protocol    = "tcp"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    protocol    = -1
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
